# MBM-Music-Visualizer

./: .gitignore  LICENSE  README.md  __init__.py  mbmAudioFeatureCalculator.py  mbmAudioLoader.py  mbmImageConcat.py  mbmInterpPromptSequence.py  mbmMVShared.py  mbmMusicVisualizer.py  mbmPrompt.py  mbmPromptSequence.py  mbmPromptSequenceBuilder.py  mbmPromptSequenceData.py  mbmPromptSequenceInterpolator.py  mbmPromptSequenceLoader.py  mbmPromptSequencePreviewer.py  mbmPromptSequenceRenderer.py  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
assets/: ExampleMusicVisualizer.json
audio/: AudioFilesHere.txt
docs/: PromptSequenceJsonSpecs.md
promptSequences/: PromptSequencesHere.txt  example.json
